# winit_egui_wgpu

./: Cargo.toml
src/: camera.rs  challenge_shader.wgsl  lib.rs  main.rs  shader.wgsl  ui.rs  vertex.rs  whatToDo.txt
src/player/: mod.rs
src/ui/: egui_tools.rs  mod.rs
src/voxelle/: mod.rs
