[package]
name = "winit_egui_wgpu"
version = "0.2.0"
edition = "2021"

crate-type = ["cdylib", "rlib"]

[[bin]]
name = "winit_egui_wgpu"
path = "src/main.rs"

[dependencies]
#  wgpu = "22.0.0"
egui = "0.28.1"
raw-window-handle = "0.6.2"
egui-wgpu = { version = "0.28.1",features = ["winit"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
env_logger = "0.10"
log = "0.4"
egui-winit = "0.28.1"
winit = "0.29.4"
pollster = "0.3.0"
glam = "0.29.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
#wgpu = { version = "0.22", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
]}
